<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="title_section_current">Lista Atual</string>
    <string name="title_section_my_lists">Minhas Listas</string>
    <string name="title_section_my_pantry">Minha Despensa</string>
    <string name="title_section_setup">Personalizar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Action</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">hello world</string>
    <string name="hi_world">hi world</string>
    <string name="products_text">Produtos</string>
    <string name="quant_text">Quant.</string>
    <string name="price_text">$Unit.</string>
    <string name="total_text">$Total</string>
    <string name="total_shop">Total da Compra: </string>
    <string name="main_menu_title">M E N U \  \  \  \  P R I N C I P A L</string>
    <string name="editing_text">Editando \ </string>
    <string name="inserting_text">Inserindo produto</string>
    <string name="cart_empty_message">O carrinho está vazio.</string>
    <string name="total_products_text">Total de itens: \ </string>
    <string name="action_rate">Avalie-me</string>
    <string name="btn_confirm">Sim</string>
    <string name="btn_no">Não</string>
    <string name="categorie_create_text">Criar nova</string>
    <string name="confirm">Confirmar</string>
    <string name="back">Voltar</string>
    <string name="custom_text">Personalizar</string>
    <string name="about_text">Sobre</string>
    <string name="ok_btn">\  \  \  \  OK\  \  \  \  </string>
    <string name="my_lists_text">M i n h a s \  \  \  \  L i s t a s</string>
    <string name="action_save_text">Salvar</string>
    <string name="name_text">\  \  Nome: </string>
    <string name="write_list_name_title">Dê um nome para sua lista de compras</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="ad_unit_id">ca-app-pub-4768510961285493/2083746763</string>
    <string name="new_version_text">Nova versão disponível</string>
    <string name="version_content_url">https://copy.com/aiL2GhXdtXba</string>
    <string name="update_label">Atualizar</string>
    <string name="after_label">Depois</string>
    <string name="ignore_label">Ignorar</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.elvis.shopping.list</string>
    <string name="dev_hash">5M0J7U70VBT3LQZFJCEQB6UY1TOO8</string>
    <string name="category_label">Nome da categoria</string>
    <string name="scratched_label">Item adicionado</string>
    <string name="canceled_label">Item não adicionado</string>
    <string name="not_added_label">Não adicionado</string>
    <string name="riscad_label">Item riscado</string>
    <string name="status_message">Mensagem de status</string>
    <string name="person_complete">Personalização concluída.</string>
    <string name="person_cancel">Personalização cancelada.</string>
    <string name="my_pantry_title">M I N H A \  \  \  \  D E S P E N S A</string>
    <string name="add_item_label">+ Item</string>
    <string name="action_complete">Concluir</string>
    <string name="principal">Main</string>
    <string name="main_menu_screens">S E Ç Õ E S</string>
    <string name="icon_view">Icon View</string>
    <string name="action_zero_text">Zerar</string>
    <string name="category_text">Categoria</string>
    <string name="nome_text">Nome</string>
    <string name="quantidade_text">Quantidade</string>
    <string name="unidade_text">Unidade</string>
    <string name="pronto_text">Pronto</string>
    <string name="cancelar_text">Cancelar</string>
    <string name="zerar_quantidades_text">Zerar quantidades</string>
    <string name="zerar_prices_text">Zerar preços</string>
    <string name="zerar_tudo_text">Zerar tudo</string>
    <string name="carregar_text">Carregar lista</string>
    <string name="renomear_text">Renomear lista</string>
    <string name="remover_text">Remover lista</string>
    <string name="remover_da_despense_text">Remover da despensa</string>
    <string name="voltar_text">Voltar</string>
    <string name="salvar_lista_text">Salvar lista</string>
    <string name="atualizar_despensa_text">Atualizar despensa</string>
    <string name="salvar_lista_e_atualizar_despensa_text">Salvar lista e atualizar despensa</string>
    <string name="editar_text">Editar</string>
    <string name="zero_text">0.00</string>
    <string name="fast_input_label">Fast Input</string>
    <string name="nome_da_lista_hint">Nome da lista</string>
    <string name="nome_do_produto_text">Nome do produto</string>
    <string name="adicionar_produto_na_despensa_title">Adicionar item na despensa</string>
    <string name="more_apps">Nossos Apps</string>
    <string name="more">M A I S</string>
</resources>
