<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/fab_material_white"
    card_view:cardCornerRadius="4dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cardview_padding"
        android:background="@color/fab_material_white">
        <com.elvis.shopping.list.view.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/adicionar_produto_na_despensa_title"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@color/fab_material_black"
            android:gravity="center"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_padding">
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/categoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/quick_contact_badge_overlay"
                android:text="@string/category_text"
                android:padding="@dimen/cardview_padding"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimaryDark" />
            <com.elvis.shopping.list.view.MyEditText
                android:id="@+id/categorySet"
                android:inputType="textCapSentences"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/category_text"
                android:textColor="@color/material_black_grey"
                android:textColorHint="@color/fab_material_grey_500"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_padding">
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/nameTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nome_text"
                android:padding="@dimen/cardview_padding"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimaryDark"/>
            <com.elvis.shopping.list.view.MyEditText
                android:id="@+id/nameSet"
                android:inputType="textCapSentences"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/nome_do_produto_text"
                android:textColor="@color/material_black_grey"
                android:textColorHint="@color/fab_material_grey_500"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_padding">
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/quantTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/quantidade_text"
                android:padding="@dimen/cardview_padding"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimaryDark"/>
            <com.elvis.shopping.list.view.MyEditText
                android:id="@+id/quantSet"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/zero_text"
                android:textColor="@color/material_black_grey"
                android:textColorHint="@color/fab_material_grey_500"/>
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/unitTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/quick_contact_badge_overlay"
                android:text="@string/unidade_text"
                android:gravity="center_vertical"
                android:padding="@dimen/cardview_padding"
                android:textColor="@color/colorPrimaryDark"/>
            <com.elvis.shopping.list.view.MyEditText
                android:id="@+id/unitSet"
                android:inputType="textCapSentences"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/unidade_text"
                android:textColor="@color/material_black_grey"
                android:textColorHint="@color/fab_material_grey_500"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_padding">
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/pronto_text"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/fab_material_green_900"
                android:background="@drawable/btn_dialog_bg"/>
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar_text"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/activity_vertical_margin"
                android:textColor="@color/fab_material_red_900"
                android:background="@drawable/btn_dialog_bg"/>
        </TableRow>
    </LinearLayout>
</android.support.v7.widget.CardView>