<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/fab_material_white"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fab_material_white"
        android:padding="@dimen/cardview_padding">
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnResetQuant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zerar_quantidades_text"
            android:background="@drawable/btn_dialog_bg"
            android:textColor="@color/material_black_grey"
            android:padding="@dimen/activity_vertical_margin"
            android:gravity="center" />
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnResetPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zerar_prices_text"
            android:background="@drawable/btn_dialog_bg"
            android:textColor="@color/material_black_grey"
            android:padding="@dimen/activity_vertical_margin"
            android:gravity="center" />
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnResetAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zerar_tudo_text"
            android:background="@drawable/btn_dialog_bg"
            android:textColor="@color/material_black_grey"
            android:padding="@dimen/activity_vertical_margin"
            android:gravity="center" />
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltar_text"
            android:textStyle="bold"
            android:textColor="@color/fab_material_red_900"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_dialog_bg"
            android:gravity="center" />
    </LinearLayout>
</android.support.v7.widget.CardView>