<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/fab_material_white"
    card_view:cardCornerRadius="4dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fab_material_white"
        android:padding="@dimen/cardview_padding">
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_lista_text"
            android:gravity="center"
            android:textColor="@color/material_black_grey"
            android:background="@drawable/btn_dialog_bg"
            android:padding="@dimen/activity_vertical_margin"/>
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnPantryUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atualizar_despensa_text"
            android:gravity="center"
            android:textColor="@color/material_black_grey"
            android:background="@drawable/btn_dialog_bg"
            android:padding="@dimen/activity_vertical_margin"/>
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnSaveAndPantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_lista_e_atualizar_despensa_text"
            android:gravity="center"
            android:textColor="@color/material_black_grey"
            android:background="@drawable/btn_dialog_bg"
            android:padding="@dimen/activity_vertical_margin"/>
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar_text"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/fab_material_red_900"
            android:background="@drawable/btn_dialog_bg"
            android:padding="@dimen/activity_vertical_margin"/>
    </LinearLayout>
</android.support.v7.widget.CardView>