<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/fab_material_white"
    card_view:cardCornerRadius="4dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@color/fab_material_white">
        <com.elvis.shopping.list.view.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/fab_material_blue_grey_900"
            android:textStyle="bold"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/write_list_name_title"/>
        <com.elvis.shopping.list.view.MyEditText
            android:id="@+id/nameSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@color/material_black_grey"
            android:textColorHint="@color/fab_material_grey_500"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/nome_da_lista_hint"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_save_text"
                android:textColor="@color/fab_material_green_900"
                android:background="@drawable/btn_dialog_bg"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"/>
            <com.elvis.shopping.list.view.MyTextView
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:textColor="@color/fab_material_red_900"
                android:background="@drawable/btn_dialog_bg"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:textStyle="bold"/>
        </TableRow>
    </LinearLayout>
</android.support.v7.widget.CardView>