<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/fab_material_white"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fab_material_white"
        android:padding="@dimen/cardview_padding">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/fab_material_white">
            <com.elvis.shopping.list.view.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/fab_material_blue_900"
                android:textStyle="bold"
                android:paddingTop="@dimen/cardview_padding"
                android:paddingBottom="@dimen/cardview_padding"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:textSize="18sp"
                android:id="@+id/container_title"/>
            <com.elvis.shopping.list.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/cardview_padding"
                android:background="@drawable/btn_clear_bg"
                android:id="@+id/btn_close"/>
        </TableRow>
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carregar_text"
            android:gravity="center"
            android:textColor="@color/material_black_grey"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_dialog_bg" />
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renomear_text"
            android:gravity="center"
            android:textColor="@color/material_black_grey"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_dialog_bg"/>
        <com.elvis.shopping.list.view.MyTextView
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/remover_text"
            android:gravity="center"
            android:textColor="@color/material_black_grey"
            android:background="@drawable/btn_dialog_bg" />
    </LinearLayout>
</android.support.v7.widget.CardView>